Changes #2
- Documentación Actualizada
- Path de los endpoints actualizados
- Los files de Dockers
- Mejoras en los endpoints de pago y auth
- Cambios de HTML
